--- a/index.html
+++ b/index.html
@@ -19,17 +19,14 @@
         	</div>
     	
         	<div class="content">
-    		    <img class="profile" src="images/me.jpg"/>
-    	    	<h1 class="name">About  Kayla Kim</h1>
-    		    <p class="bio">Hi, my name is Kayla Kim, and I am a student that is currently in the 
-            	class of 2016 for AP Computer Science Priniciples. Over the course of the year, my fellow classmates
-            	and I have completed many projects, and have successfully grasped the foundation of Python, and several
-            	other programing languages.</p>
+    		    <!--<img class="profile" src="images/me.jpg"/>-->
+    	    	<h1 class="name">About  Kieran Kim</h1>
+    		    <p class="bio">[Insert Bio here].</p>
     	    </div>
     	    
         	<div class="media">
-                <a href="https://www.instagram.com"><img class="insta" src="images/instagram.png"></a>
-        	    <a href="https://www.facebook.com"><img class="face" src="images/facebook.png"></a>
+                <!--<a href="https://www.instagram.com"><img class="insta" src="images/instagram.png"></a>
+        	    <a href="https://www.facebook.com"><img class="face" src="images/facebook.png"></a>-->
         	</div>
 
         </body>
