--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
     	<link href="homeStyle.css" rel="stylesheet" type="text/css"> 
-    	<link rel="shortcut icon" href=images/kIcon.jpg />
+    	<!--<link rel="shortcut icon" href=images/kIcon.jpg />-->
         <meta charset="utf-8">
         <title>Home Page</title>
     </head>
     
         <body>
         	<div class="header">
-    	    	<a class="htext" href="portfolio/portfolio.html">Portfolio</a>
+    	    	<!--<a class="htext" href="portfolio/portfolio.html">Portfolio</a>-->
     	    	<a class="htext" href="index.html">Home</a>
     	    	<p class="title">AP Computer Science Priniciples</p>
         	</div>
