--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         	</div>
     	
         	<div id="element">
-            	<h1 class="element">Portfolio</h1>
+            	<h1 class="element">Resume</h1>
+                <h1 class="element">Portfolio</h1>
+                <h1 class="element">Contact</h1>
         	</div>
     	
         	<div class="content">
