--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
     	    </div>
     	    
         	<div class="media">
-                <!--<a href="https://www.instagram.com"><img class="insta" src="images/instagram.png"></a>
-        	    <a href="https://www.facebook.com"><img class="face" src="images/facebook.png"></a>-->
+                <a href="https://www.linkedin.com/in/kieran-kim/"><img class="insta" src="images/linkedin.png"></a>
         	</div>
 
         </body>
