--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     	    </div>
     	    
         	<div class="media">
-                <a href="https://www.linkedin.com/in/kieran-kim/"><img class="insta" src="images/linkedin.png"></a>
+                <a href="https://www.linkedin.com/in/kieran-kim/"><img class="linked" src="images/linkedin.png"></a>
         	</div>
 
         </body>
