--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@
         	
             	<div class="content">
         		    <img class="profile" src="images/generic.jpg"/>
-        	    	<h1 class="name">[Project Title]</h1>
+        	    	<h1 class="name">[Project Title 1]</h1>
+        		    <p class="bio">[Project Description].</p>        		
+                    
+                    <img class="profile" src="images/generic.jpg"/>
+        	    	<h1 class="name">[Project Title 2]</h1>
+        		    <p class="bio">[Project Description].</p>
+
+                    <img class="profile" src="images/generic.jpg"/>
+        	    	<h1 class="name">[Project Title 3]</h1>
         		    <p class="bio">[Project Description].</p>
         	    </div>
             </div>
