--- a/home.html
+++ b/home.html
@@ -9,9 +9,9 @@
     
         <body>
         	<div class="header">
-    	    	<a class="htext" href="index.html">Contact</a>
+    	    	<a class="htext" href="index.html">Resume</a>
                 <a class="htext" href="index.html">Portfolio</a>
-                <a class="htext" href="index.html">Resume</a>
+                <a class="htext" href="index.html">Home</a>
     	    	<p class="title">Kieran I. Kim</p>
         	</div>
 
