Restructure Website and links

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-    	<link href="homeStyle.css" rel="stylesheet" type="text/css"> 
+    	<link href="portfolioStyle.css" rel="stylesheet" type="text/css"> 
     	<!--<link rel="shortcut icon" href=images/kIcon.jpg />-->
         <meta charset="utf-8">
         <title>Kieran I. Kim - Portfolio</title>
