--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     	<link href="homeStyle.css" rel="stylesheet" type="text/css"> 
     	<!--<link rel="shortcut icon" href=images/kIcon.jpg />-->
         <meta charset="utf-8">
-        <title>Kieran I. Kim - Portfolio</title>
+        <title>Kieran I. Kim - Home</title>
     </head>
     
         <body>
