--- a/portfolio.html
+++ b/portfolio.html
@@ -4,13 +4,13 @@
     	<link href="portfolioStyle.css" rel="stylesheet" type="text/css"> 
     	<!--<link rel="shortcut icon" href=images/kIcon.jpg />-->
         <meta charset="utf-8">
-        <title>Kieran I. Kim - Portfolio</title>
+        <title>Kieran I. Kim | Portfolio</title>
     </head>
     
         <body>
         	<div class="header">
     	    	<a class="htext" href="index.html">Resume</a>
-                <a class="htext" href="index.html">Portfolio</a>
+                <a class="htext" href="portfolio.html">Portfolio</a>
                 <a class="htext" href="index.html">Home</a>
     	    	<p class="title">Kieran I. Kim</p>
         	</div>
