--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     	<link href="homeStyle.css" rel="stylesheet" type="text/css"> 
     	<!--<link rel="shortcut icon" href=images/kIcon.jpg />-->
         <meta charset="utf-8">
-        <title>Kieran I. Kim - Home</title>
+        <title>Kieran I. Kim | Home</title>
     </head>
     
         <body>
         	<div class="header">
-    	    	<a class="htext" href="index.html">Resume</a>
-                <a class="htext" href="index.html">Portfolio</a>
+    	    	<a class="htext" href="Kieran Kim Resume - 15OCT2025" target="_blank">Resume</a>
+                <a class="htext" href="portfolio.html">Portfolio</a>
                 <a class="htext" href="index.html">Home</a>
     	    	<p class="title">Kieran I. Kim</p>
         	</div>
 
             <div class="main">
             	<div id="element">
-                    <h1 class="element">Portfolio</h1>
+                    <h1 class="element">About Me</h1>
             	</div>
 
                 <div class="content">
