--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
     
         <body>
         	<div class="header">
-    	    	<a class="htext" href="index.html">Resume</a>
+    	    	<a class="htext" href="kieran_kim_resume.pdf" target="_blank">Resume</a>
                 <a class="htext" href="portfolio.html">Portfolio</a>
                 <a class="htext" href="index.html">Home</a>
     	    	<p class="title">Kieran I. Kim</p>
