--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
                 <div class="content">
     		    	<img class="profile" src="images/generic.jpg"/>
-    	    		<h1 class="name">< Start Here! ></h1>
-    		    	<p class="bio">Hello! Welcome to my website where you can see an overview 
-						of my experiences and projects I've worked on during my academic and industry career. 
-						I'm a biomedical engineer with experience in medical devices, and a passion for research and design. 
-						Feel free to review my resume and contact me with any questions or prospects.</p>
+    	    		<h1 class="name">Start Here!</h1>
+    		    	<p class="bio">Hello!</p>
+					<p class="bio">Welcome to my website where you can see an overview 
+						of my experiences and projects I've worked on during my academic and industry career.</p>
+					<p class="bio">I'm a biomedical engineer with experience in medical devices, 
+						and a passion for research and design. </p>
+					<p class="bio">Feel free to review my resume and contact me with any questions or prospects.</p>
     	    	</div>
             </div>
                 
