Adding contact info

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
                 
-        	<div class="media">
+        	<div class="contact">
                 <a href="https://www.linkedin.com/in/kieran-kim/"><img class="linked" src="images/linkedin.png"></a>
         	</div>
 
