--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     	    	</div>
             </div>
                 
-        	<div class="media">
+        	<div class="contact">
+				<p>Contact</p>
+				<p>kiminyoungk@gmail.com</p>
                 <a href="https://www.linkedin.com/in/kieran-kim/"><img class="linked" src="images/linkedin.png"></a>
         	</div>
 
