--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             	<div id="element">
 					<div class="content">
 						<img class="profile" src="images/generic.jpg"/>
-						<h1 class="name">Start Here!</h1>
-						<p class="bio">Hello!</p>
+						<h1 class="name">Hello!</h1>
 						<p class="bio">Welcome to my website where you can see an overview 
 							of my experiences and projects I've worked on during my academic 
 							and industry career. I'm a biomedical engineer with experience 
