--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             </div>
                 
         	<div class="contact">
-				<p>Contact</p>
-				<p>kiminyoungk@gmail.com</p>
+				<p class="contactText">Contact: kiminyoungk@gmail.com</p>
                 <a href="https://www.linkedin.com/in/kieran-kim/"><img class="linked" src="images/linkedin.png"></a>
         	</div>
 
