--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
                 
         	<div class="contact">
 				<p>Contact</p>
-				<p>kiminyoungk@gmail.com</p>
+				<p class="contactText">Contact: kiminyoungk@gmail.com</p>
                 <a href="https://www.linkedin.com/in/kieran-kim/"><img class="linked" src="images/linkedin.png"></a>
         	</div>
 
